--- a/views/index.ejs
+++ b/views/index.ejs
@@ -205,7 +205,7 @@
 				<div id="contact-alert"></div>
 			</div>
 
-			<form class="col-md-6 offset-md-3 p-0" id="contact-form" method="POST" action="/api/contact/">
+			<form class="col-md-6" id="contact-form" method="POST" action="/api/contact/">
 				<div class="row">
 					<div class="col-md-12">
 						<label class="control-label">Email</label>
@@ -225,6 +225,8 @@
 				<input type="submit" class="action-btn" value="Send" id="submit-contact" />
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 			</form>
+
+			<img src="/svg/undraw_messages.svg" class="contact-svg" alt="Contact Illustration" data-animation="freelancerAnim" />
 
 			<div class="contact-footer">
 				<ul>
