--- a/views/index.ejs
+++ b/views/index.ejs
@@ -205,7 +205,7 @@
 				<div id="contact-alert"></div>
 			</div>
 
-			<form class="col-md-6" id="contact-form" method="POST" action="/api/contact/">
+			<form class="col-md-6" id="contact-form" method="POST" data-animation="formAnim" action="/api/contact/">
 				<div class="row">
 					<div class="col-md-12">
 						<label class="control-label">Email</label>
