--- a/public/main.css
+++ b/public/main.css
@@ -1,4 +1,36 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+.dark-mode {
+  -webkit-filter: invert(1) hue-rotate(180deg);
+          filter: invert(1) hue-rotate(180deg);
+}
+
+.dark-mode .invert {
+  -webkit-filter: invert(1) hue-rotate(180deg);
+          filter: invert(1) hue-rotate(180deg);
+}
+
+/*
+
+document.onkeypress = function (e) {
+	e = e || window.event;
+
+	if (e.keycode === 13) {
+		document.documentElement.classList.toggle('dark-mode')
+
+		document.querySelectorAll('.inverted').forEach((result) => {
+			result.classList.toggle('invert);
+		})
+	}
+}
+
+*/
 /* 
 	alt main colors
 		#f34023 orangeish
@@ -41,14 +73,7 @@ html[data-theme="dark"] {
 	//js script sets data theme
 }
 */
-@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 /* main */
-@import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /* GLOBAL */
 * {
   margin: 0;
@@ -219,7 +244,7 @@ body {
 
 input,
 textarea {
-  background-color: #e0dede !important !important;
+  background-color: #e0dede !important;
   font-weight: bold;
   color: #f34023;
   -webkit-box-sizing: border-box;
@@ -408,6 +433,7 @@ select:-webkit-autofill {
   top: 6%;
   right: 4%;
   width: 35%;
+  opacity: 0.7;
 }
 
 .hero-title {
@@ -970,6 +996,46 @@ select:-webkit-autofill {
   opacity: 0;
   -webkit-animation: freelancerAnim 1s 1 0.2s ease forwards;
           animation: freelancerAnim 1s 1 0.2s ease forwards;
+}
+
+@-webkit-keyframes contactSvgAnim {
+  0% {
+    -webkit-filter: blur(0.5rem);
+            filter: blur(0.5rem);
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 0.7;
+  }
+}
+
+@keyframes contactSvgAnim {
+  0% {
+    -webkit-filter: blur(0.5rem);
+            filter: blur(0.5rem);
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 0.7;
+  }
+}
+
+.contactSvgAnim {
+  opacity: 0;
+  -webkit-animation: contactSvgAnim 1s 1 0.2s ease forwards;
+          animation: contactSvgAnim 1s 1 0.2s ease forwards;
 }
 
 @-webkit-keyframes formAnim {
