--- a/views/index.ejs
+++ b/views/index.ejs
@@ -219,15 +219,14 @@
 					</div>
 					<div class="col-md-12 mt-2">
 						<label class="control-label">Message</label>
-						<textarea class="mb-0" id="content" rows="8" name="content" placeholder="Write your message here...." required></textarea>
+						<textarea class="mb-0" id="content" rows="8" name="content" placeholder="Write your message here..." required></textarea>
 					</div>
 				</div>
 				<input type="submit" class="action-btn" value="Send" id="submit-contact" />
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 			</form>
 
-			<img src="/svg/undraw_messages.svg" class="contact-svg" alt="Contact Illustration" data-animation="freelancerAnim" />
-
+			<img src="/svg/undraw_messages.svg" class="contact-svg" alt="Contact Illustration" data-animation="contactSvgAnim" />
 			<div class="contact-footer">
 				<ul>
 					<li><i class="fas fa-phone"></i> <span>+33 6 89 89 81 98</span></li>
