fixed issue with watermak color and bg colors, fixed issue with submit btn and pseudo elements not working, used div instead

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
 			<h2 class="hero-secondary-title">❝<i>I will build the website you've been dreaming of</i> ❞</h2>
 
 			<a href="#portfolio" class="action-link portfolio-link" data-animation="portfolioLinkAnim">Portfolio</a>
-			<img src="/svg/undraw_freelancer.svg" class="freelancer-svg" alt="Freelance Illustration" data-animation="freelancerAnim" />
+			<img src="/svg/undraw_freelancer.svg" class="freelancer-svg" alt="Freelance Illustration" data-animation="freelancerAnim" draggable="false" />
 			<div class="scroll-indicator" data-animation="indicatorAnim"></div>
 		</div>
 	</section>
@@ -57,7 +57,7 @@
 					</div>
 
 					<div class="portfolio-thumbnail-wrapper col-md-6">
-						<a href="https://www.maral.fr" target="_blank"><img class="w-100" src="/img/maral_thumbnail.jpg" alt="Maral.fr Screenshot" /></a>
+						<a href="https://www.maral.fr" target="_blank"><img class="w-100" src="/img/maral_thumbnail.jpg" alt="Maral.fr Screenshot" draggable="false" /></a>
 					</div>
 				</div>
 			</div>
@@ -84,43 +84,43 @@
 						<h1>{</h1>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/javascript_icon.png" alt="Javascript" />
+								<img class="skill-icon" src="/img/icons/white/javascript_icon.png" alt="Javascript" draggable="false" />
 							</div>
 							<label>Javascript</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/jquery_icon.png" alt="JQuery" />
+								<img class="skill-icon" src="/img/icons/white/jquery_icon.png" alt="JQuery" draggable="false" />
 							</div>
 							<label>JQuery</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/html_icon.png" alt="HTML5" />
+								<img class="skill-icon" src="/img/icons/white/html_icon.png" alt="HTML5" draggable="false" />
 							</div>
 							<label>HTML5</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/css_icon.png" alt="CSS3" />
+								<img class="skill-icon" src="/img/icons/white/css_icon.png" alt="CSS3" draggable="false" />
 							</div>
 							<label>CSS3</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/sass_icon.png" alt="SASS" />
+								<img class="skill-icon" src="/img/icons/white/sass_icon.png" alt="SASS" draggable="false" />
 							</div>
 							<label>SASS</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/vuejs_icon.png" alt="Vuejs" />
+								<img class="skill-icon" src="/img/icons/white/vuejs_icon.png" alt="Vuejs" draggable="false" />
 							</div>
 							<label>Vue.js</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/white/bootstrap_icon.png" alt="Bootstrap" />
+								<img class="skill-icon" src="/img/icons/white/bootstrap_icon.png" alt="Bootstrap" draggable="false" />
 							</div>
 							<label>Bootstrap</label>
 						</div>
@@ -133,31 +133,31 @@
 							<h1>{</h1>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/white/nodejs_icon.png" alt="NodeJS" />
+									<img class="skill-icon" src="/img/icons/white/nodejs_icon.png" alt="NodeJS" draggable="false" />
 								</div>
 								<label>NodeJS</label>
 							</div>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/white/php_icon.png" alt="PHP" />
+									<img class="skill-icon" src="/img/icons/white/php_icon.png" alt="PHP" draggable="false" />
 								</div>
 								<label>PHP</label>
 							</div>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/white/database_icon.png" alt="Database SQL/noSQL" />
+									<img class="skill-icon" src="/img/icons/white/database_icon.png" alt="Database SQL/noSQL" draggable="false" />
 								</div>
 								<label>SQL / noSQL</label>
 							</div>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/white/api_icon.png" alt="API" />
+									<img class="skill-icon" src="/img/icons/white/api_icon.png" alt="API" draggable="false" />
 								</div>
 								<label>API</label>
 							</div>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/white/s3_icon.png" alt="S3" />
+									<img class="skill-icon" src="/img/icons/white/s3_icon.png" alt="S3" draggable="false" />
 								</div>
 								<label>S3</label>
 							</div>
@@ -171,20 +171,20 @@
 							<h1>{</h1>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/white/git_icon.png" alt="Git" />
+									<img class="skill-icon" src="/img/icons/white/git_icon.png" alt="Git" draggable="false" />
 								</div>
 								<label>Git</label>
 							</div>
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/white/docker_icon.png" alt="Docker" />
+									<img class="skill-icon" src="/img/icons/white/docker_icon.png" alt="Docker" draggable="false" />
 								</div>
 								<label>Docker</label>
 							</div>
 
 							<div class="wrapper-icon">
 								<div>
-									<img class="skill-icon" src="/img/icons/white/console_icon.png" alt="Shell" />
+									<img class="skill-icon" src="/img/icons/white/console_icon.png" alt="Shell" draggable="false" />
 								</div>
 								<label>Shell</label>
 							</div>
@@ -218,15 +218,19 @@
 						<textarea class="mb-0" id="content" rows="8" name="content" placeholder="Write your message here..." required></textarea>
 					</div>
 				</div>
-				<input type="submit" class="action-btn" value="Send" id="submit-contact" />
+
+				<div class="submit-btn-wrapper">
+					<span>Send</span>
+					<input type="submit" class="action-btn" value="Send" id="submit-contact" />
+				</div>
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-				
+
 				<div class="col-md-12 p-0 contact-alert-wrapper">
 					<div id="contact-alert"></div>
 				</div>
 			</form>
 
-			<img src="/svg/undraw_messages.svg" class="contact-svg" alt="Contact Illustration" data-animation="contactSvgAnim" />
+			<img src="/svg/undraw_messages.svg" class="contact-svg" alt="Contact Illustration" data-animation="contactSvgAnim" draggable="false" />
 			<div class="contact-footer">
 				<ul>
 					<li><i class="fas fa-phone"></i> <span>+33 6 89 89 81 98</span></li>
