--- a/public/main.css
+++ b/public/main.css
@@ -100,7 +100,7 @@ html[data-theme="dark"] {
 body,
 html {
   height: 100vh;
-  background-color: #080808;
+  background-color: #0c0c0c;
 }
 
 body {
@@ -109,12 +109,45 @@ body {
   z-index: 0;
 }
 
+.submit-btn-wrapper {
+  width: 250px;
+  margin: 5px auto 0 auto;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  background-image: -webkit-gradient(linear, right top, left top, from(#f34023), to(#f66a53));
+  background-image: linear-gradient(270deg, #f34023, #f66a53);
+  z-index: 6;
+  text-decoration: none;
+  color: #f1f1f1 !important;
+  font-size: 24px;
+  text-align: center;
+  -webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
+  clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
+}
+
+.submit-btn-wrapper span {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.submit-btn-wrapper:hover {
+  color: #f1f1f1 !important;
+  text-decoration: none;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
+  clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
+}
+
 .action-btn {
   display: block;
   padding: 10px 0;
   border: none !important;
-  background: -webkit-gradient(linear, left top, right top, from(#f34023), to(#f66a53));
-  background: linear-gradient(90deg, #f34023, #f66a53);
+  background-image: -webkit-gradient(linear, left top, right top, from(#f34023), to(#f66a53));
+  background-image: linear-gradient(90deg, #f34023, #f66a53);
   color: #f1f1f1 !important;
   outline: none;
   cursor: pointer;
@@ -131,63 +164,14 @@ body {
   clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
 }
 
-.action-btn:before {
-  border-radius: inherit;
-  background-image: -webkit-gradient(linear, right top, left top, from(#f34023), to(#f66a53));
-  background-image: linear-gradient(270deg, #f34023, #f66a53);
-  content: "";
-  display: block;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  width: 100%;
-  z-index: -100;
-  -webkit-transition: opacity 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out;
-}
-
 .action-btn:hover {
+  opacity: 0;
   color: #f1f1f1 !important;
   text-decoration: none;
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
   -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
   clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-}
-
-.action-btn:hover:before {
-  opacity: 1;
-}
-
-.action-btn:before {
-  border-radius: inherit;
-  background-image: -webkit-gradient(linear, right top, left top, from(red), to(blue));
-  background-image: linear-gradient(270deg, red, blue);
-  display: block;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  width: 100%;
-  z-index: -100;
-  -webkit-transition: opacity 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out;
-}
-
-.action-btn:hover {
-  color: #f1f1f1 !important;
-  text-decoration: none;
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
-  -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-  clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-}
-
-.action-btn:hover:before {
-  opacity: 1;
 }
 
 .action-link {
@@ -261,7 +245,7 @@ body {
 
 .fp-controlArrow.fp-next {
   right: 50px;
-  border-color: transparent transparent transparent #1b1b1b;
+  border-color: transparent transparent transparent #1f1f1f;
   -webkit-transition: ease-in 0.15s;
   transition: ease-in 0.15s;
 }
@@ -275,7 +259,7 @@ body {
 
 .fp-controlArrow.fp-prev {
   left: 50px;
-  border-color: transparent #1b1b1b transparent transparent;
+  border-color: transparent #1f1f1f transparent transparent;
   -webkit-transition: ease-in 0.15s;
   transition: ease-in 0.15s;
 }
@@ -334,7 +318,7 @@ select:-webkit-autofill {
 
 .control-label {
   font-size: 24px;
-  color: #272727;
+  color: #2b2b2b;
   font-weight: bold;
   margin-bottom: -3px;
 }
@@ -390,12 +374,12 @@ select:-webkit-autofill {
 /* END NAVBAR */
 #landing-section {
   background-repeat: no-repeat;
-  background-color: #080808;
+  background-color: #0c0c0c;
   z-index: 2;
 }
 
 .main-section {
-  background-color: #080808;
+  background-color: #0c0c0c;
   height: 100vh;
 }
 
@@ -439,7 +423,7 @@ select:-webkit-autofill {
 
 .hero .portfolio-link {
   margin-left: 23%;
-  margin-top: 3em;
+  margin-top: 1em;
 }
 
 .scroll-indicator {
@@ -485,11 +469,11 @@ select:-webkit-autofill {
 
 .hero-title {
   font-size: 8rem;
-  font-weight: bold;
+  /*font-weight: bold;*/
   font-family: "Noir" !important;
   color: #f34023;
   margin-left: 10%;
-  margin-top: -25px;
+  margin-top: -35px;
   font-style: italic;
   display: inline-block;
   opacity: 1;
@@ -509,19 +493,19 @@ select:-webkit-autofill {
   font-size: 5rem !important;
   width: 50%;
   margin-left: 7%;
-  margin-top: 1.5rem;
+  margin-top: 4.5rem;
   line-height: 4rem;
 }
 
 #skills-section {
   margin-top: -1px;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #080808), color-stop(50%, #f1f1f1));
-  background: linear-gradient(to bottom, #080808 50%, #f1f1f1 50%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #0c0c0c), color-stop(50%, #f1f1f1));
+  background: linear-gradient(to bottom, #0c0c0c 50%, #f1f1f1 50%);
 }
 
 #skills-section .bg-clipper {
   height: 102%;
-  background-color: #080808;
+  background-color: #0c0c0c;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
           clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
 }
@@ -564,7 +548,7 @@ select:-webkit-autofill {
 
 #skills-section .skills-wrapper h1 {
   font-size: 75px;
-  color: #1b1b1b;
+  color: #1f1f1f;
 }
 
 #skills-section .skills-wrapper .wrapper-icon {
@@ -607,22 +591,22 @@ select:-webkit-autofill {
 
 #landing-section .bg-clipper {
   height: 100%;
-  background-color: #080808;
+  background-color: #0c0c0c;
   -webkit-clip-path: polygon(0px 0px, 100% 0px, 100% 98%, 89% 95%, 31% 85%, 0px 78%);
           clip-path: polygon(0px 0px, 100% 0px, 100% 98%, 89% 95%, 31% 85%, 0px 78%);
 }
 
 #contact-section {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #f1f1f1), color-stop(50%, #080808));
-  background: linear-gradient(to bottom, #f1f1f1 50%, #080808 50%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #f1f1f1), color-stop(50%, #0c0c0c));
+  background: linear-gradient(to bottom, #f1f1f1 50%, #0c0c0c 50%);
 }
 
 #contact-section .bg-clipper {
   height: 105%;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 87%, 86% 98%, 19% 98%, 0 86%);
           clip-path: polygon(0 0, 100% 0, 100% 87%, 86% 98%, 19% 98%, 0 86%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(89%, #f1f1f1), color-stop(11%, #080808));
-  background: linear-gradient(to bottom, #f1f1f1 89%, #080808 11%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(89%, #f1f1f1), color-stop(11%, #0c0c0c));
+  background: linear-gradient(to bottom, #f1f1f1 89%, #0c0c0c 11%);
 }
 
 #contact-section #contact-form {
@@ -666,8 +650,8 @@ select:-webkit-autofill {
 }
 
 #portfolio-section {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #f1f1f1), color-stop(50%, #080808));
-  background: linear-gradient(to bottom, #f1f1f1 50%, #080808 50%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #f1f1f1), color-stop(50%, #0c0c0c));
+  background: linear-gradient(to bottom, #f1f1f1 50%, #0c0c0c 50%);
 }
 
 #portfolio-section h1 a {
@@ -723,7 +707,7 @@ select:-webkit-autofill {
   display: inline-block;
   margin: 10px 10px 0 10px;
   padding: 5px 15px;
-  background-color: #1b1b1b;
+  background-color: #1f1f1f;
   color: #f34023;
   font-weight: bold;
   -webkit-transition: 0.3s ease-in-out;
