--- a/public/main.scss
+++ b/public/main.scss
@@ -1,9 +1,9 @@
 $colors: (
 	light-shade: #f1f1f1,
 	light-gray: #dedddd,
-	dark-shade: #080808,
-	dark-shade-light: lighten(#080808, 7.5%),
-	dark-shade-lighter: lighten(#080808, 12%),
+	dark-shade: #0c0c0c,
+	dark-shade-light: lighten(#0c0c0c, 7.5%),
+	dark-shade-lighter: lighten(#0c0c0c, 12%),
 	main: #f34023,
 	main-light: lighten(#f34023, 10%),
 	maral: #1a7cc3,
@@ -126,12 +126,44 @@ body {
 	z-index: 0;
 }
 
+.submit-btn-wrapper {
+	width: 250px;
+	margin: 5px auto 0 auto;
+	-webkit-transition: 0.3s ease-in-out;
+	transition: 0.3s ease-in-out;
+	background-image: linear-gradient(270deg, color(main), color(main-light));
+	z-index: 6;
+	text-decoration: none;
+	color: #f1f1f1 !important;
+	font-size: 24px;
+	text-align: center;
+	-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
+	clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
+
+	span {
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+	&:hover {
+		color: color(light-shade) !important;
+		text-decoration: none;
+		transform: scale(1.05);
+
+		-webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
+		clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
+	}
+}
+
 .action-btn {
 	display: block;
 	padding: 10px 0;
 	border: none !important;
-	background: -webkit-gradient(linear, left top, right top, from(#f34023), to(#f66a53));
-	background: linear-gradient(90deg, #f34023, #f66a53);
+	//	background-size: 250px;
+	//	background-repeat: repeat;
+	background-image: linear-gradient(90deg, color(main), color(main-light));
 	color: #f1f1f1 !important;
 	outline: none;
 	cursor: pointer;
@@ -147,57 +179,15 @@ body {
 	-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
 	clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
 
-	&:before {
-		border-radius: inherit;
-		background-image: linear-gradient(270deg, color(main), color(main-light));
-		content: "";
-		display: block;
-		height: 100%;
-		position: absolute;
-		top: 0;
-		left: 0;
-		opacity: 0;
-		width: 100%;
-		z-index: -100;
-		transition: opacity 0.3s ease-in-out;
-	}
-
 	&:hover {
+		opacity: 0;
+		//background-position: -250px;
 		color: color(light-shade) !important;
 		text-decoration: none;
 		transform: scale(1.05);
 
 		-webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
 		clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-		&:before {
-			opacity: 1;
-		}
-	}
-}
-
-.action-btn:before {
-	border-radius: inherit;
-	background-image: linear-gradient(270deg, red, blue);
-	display: block;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	opacity: 0;
-	width: 100%;
-	z-index: -100;
-	transition: opacity 0.3s ease-in-out;
-}
-
-.action-btn:hover {
-	color: color(light-shade) !important;
-	text-decoration: none;
-	transform: scale(1.05);
-
-	-webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-	clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
-	&:before {
-		opacity: 1;
 	}
 }
 
@@ -430,7 +420,7 @@ select:-webkit-autofill {
 
 	.portfolio-link {
 		margin-left: 23%;
-		margin-top: 3em;
+		margin-top: 1em;
 	}
 }
 
@@ -476,11 +466,11 @@ select:-webkit-autofill {
 
 .hero-title {
 	font-size: 8rem;
-	font-weight: bold;
+	/*font-weight: bold;*/
 	font-family: "Noir" !important;
 	color: color(main);
 	margin-left: 10%;
-	margin-top: -25px;
+	margin-top: -35px;
 	font-style: italic;
 	display: inline-block;
 	opacity: 1;
@@ -500,7 +490,7 @@ select:-webkit-autofill {
 	font-size: 5rem !important;
 	width: 50%;
 	margin-left: 7%;
-	margin-top: 1.5rem;
+	margin-top: 4.5rem;
 	line-height: 4rem;
 }
 
