--- a/views/index.ejs
+++ b/views/index.ejs
@@ -201,7 +201,7 @@
 		<div class="bg-clipper">
 			<h1 class="hero-title mt-2" data-animation="heroAnim">Contact</h1>
 
-			<form class="col-md-6" id="contact-form" method="POST" data-animation="formAnim" action="/api/contact/">
+			<form class="col-md-6 col-sm-8 offset-sm-2" id="contact-form" method="POST" data-animation="formAnim" action="/api/contact/">
 				<div class="row">
 					<div class="col-md-12">
 						<label class="control-label">Email</label>
