--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,19 +8,19 @@
 
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="https://www.github.com/ablin42" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+						<a class="nav-link" href="https://www.linkedin.com/in/ablin42/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="https://www.linkedin.com/in/ablin42/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+						<a class="nav-link" href="https://www.github.com/ablin42" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
 					</li>
 				</ul>
 			</nav>
 
 			<h3 data-animationC="firstHeroAnim">Hi, Im a <i>{</i><b> fullstack web developer </b><i>}</i> and my name is</h3>
 			<h1 class="hero-title" data-animation="heroAnim">Andreas Blin</h1>
-			<h2 class="hero-secondary-title">❝<i>I will build the website you've been dreaming of</i> ❞</h2>
+			<h2 class="hero-secondary-title col-md-6 offset-md-1">❝<i>I will build the website you've been dreaming of</i> ❞</h2>
 
-			<a href="#portfolio" class="action-link portfolio-link" data-animation="portfolioLinkAnim">Portfolio</a>
+			<a href="#portfolio" class="action-link portfolio-link offset-md-3" data-animation="portfolioLinkAnim">Portfolio</a>
 			<img src="/svg/undraw_freelancer.svg" class="freelancer-svg" alt="Freelance Illustration" data-animation="freelancerAnim" draggable="false" />
 			<div class="scroll-indicator" data-animation="indicatorAnim"></div>
 		</div>
@@ -76,11 +76,11 @@
 		<div class="bg-clipper">
 			<h1 class="hero-title mt-2 mb-0" data-animation="heroAnim">Skills</h1>
 
-			<p class="skills-text">{ Non-exhaustive list }</p>
-			<div class="skills-section-wrapper">
+			<div class="col-md-10 offset-md-1 p-3">
+				<p class="skills-text">{ Non-exhaustive list }</p>
 				<div class="skills-section">
 					<h2>Front-end</h2>
-					<div class="skills-wrapper">
+					<div class="skills-wrapper col-lg-8 offset-lg-2 col-md-10 offset-md-1">
 						<h1>{</h1>
 						<div class="wrapper-icon">
 							<div>
@@ -129,7 +129,7 @@
 
 					<div class="skills-section">
 						<h2>Back-end</h2>
-						<div class="skills-wrapper">
+						<div class="skills-wrapper col-lg-8 offset-lg-2 col-md-10 offset-md-1">
 							<h1>{</h1>
 							<div class="wrapper-icon">
 								<div>
@@ -167,7 +167,7 @@
 
 					<div class="skills-section">
 						<h2>Misc</h2>
-						<div class="skills-wrapper">
+						<div class="skills-wrapper col-lg-8 offset-lg-2">
 							<h1>{</h1>
 							<div class="wrapper-icon">
 								<div>
@@ -225,7 +225,7 @@
 				</div>
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 
-				<div class="col-md-12 p-0 contact-alert-wrapper">
+				<div class="col-md-12 p-0 mt-3 contact-alert-wrapper">
 					<div id="contact-alert"></div>
 				</div>
 			</form>
