skills responsiveness mostly done, worked on svg responsiveness, checked bg clips, width values/grid

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,8 +16,8 @@
 				</ul>
 			</nav>
 
-			<h3 data-animationC="firstHeroAnim">Hi, Im a <i>{</i><b> fullstack web developer </b><i>}</i> and my name is</h3>
-			<h1 class="hero-title" data-animation="heroAnim">Andreas Blin</h1>
+			<h3 class="col-md-8" data-animationC="firstHeroAnim">Hi, Im a <i>{</i><b> fullstack web developer </b><i>}</i> and my name is</h3>
+			<h1 class="hero-title" data-animation="heroAnim">Andréas Blin</h1>
 			<h2 class="hero-secondary-title col-md-6 offset-md-1">❝<i>I will build the website you've been dreaming of</i> ❞</h2>
 
 			<a href="#portfolio" class="action-link portfolio-link offset-md-3" data-animation="portfolioLinkAnim">Portfolio</a>
@@ -76,11 +76,11 @@
 		<div class="bg-clipper">
 			<h1 class="hero-title mt-2 mb-0" data-animation="heroAnim">Skills</h1>
 
-			<div class="col-md-10 offset-md-1 p-3">
+			<div class="skill-content col-md-10 p-3">
 				<p class="skills-text">{ Non-exhaustive list }</p>
 				<div class="skills-section">
 					<h2>Front-end</h2>
-					<div class="skills-wrapper col-lg-8 offset-lg-2 col-md-10 offset-md-1">
+					<div class="skills-wrapper col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
 						<h1>{</h1>
 						<div class="wrapper-icon">
 							<div>
