--- a/public/main.css
+++ b/public/main.css
@@ -446,11 +446,11 @@ select:-webkit-autofill {
   opacity: 0.8;
   position: absolute;
   text-align: center;
-  width: 6rem;
+  width: 100px;
 }
 
 .freelancer-svg {
-  width: 45%;
+  width: clamp(250px, 45%, 850px);
   position: absolute;
   left: 50%;
   top: 25%;
@@ -507,9 +507,16 @@ select:-webkit-autofill {
           clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
 }
 
-#skills-section .skills-section-wrapper {
-  width: 70%;
-  margin: 0 auto 15px auto;
+#skills-section .skill-content {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+#skills-section .action-link {
+  margin-top: 2em !important;
 }
 
 #skills-section .skills-section h2 {
@@ -527,8 +534,8 @@ select:-webkit-autofill {
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
   position: absolute;
-  right: 6%;
-  top: 50%;
+  right: -2%;
+  top: 45%;
 }
 
 #skills-section .skills-wrapper {
@@ -569,8 +576,8 @@ select:-webkit-autofill {
 
 #skills-section .skills-wrapper .wrapper-icon .skill-icon {
   max-width: 100%;
-  height: 80px;
-  width: 80px;
+  height: clamp(50px, 5vw, 80px);
+  width: clamp(50px, 5vw, 80px);
   margin: auto;
   -webkit-transition: ease-in 0.2s;
   transition: ease-in 0.2s;
@@ -748,14 +755,10 @@ select:-webkit-autofill {
 }
 
 #portfolio-section #maral h1,
-#portfolio-section #maral h1 a {
-  color: #1a7cc3;
-}
-
-#portfolio-section #maral b {
-  color: #1a7cc3;
-}
-
+#portfolio-section #maral h1 a,
+#portfolio-section #maral b a,
+#portfolio-section #maral b,
+#portfolio-section #maral a,
 #portfolio-section #maral li {
   color: #1a7cc3;
 }
@@ -1148,6 +1151,9 @@ select:-webkit-autofill {
   #landing-section .bg-clipper {
     height: 110%;
   }
+  #skills-section .skill-content {
+    top: 50%;
+  }
   #skills-section .skills-section h2 {
     margin-left: 0;
   }
@@ -1167,11 +1173,6 @@ select:-webkit-autofill {
     margin-top: -15px;
     text-indent: 20px;
   }
-  .hero .hero-secondary-title {
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
-  }
   .hero .portfolio-link {
     margin-left: auto;
     margin-right: auto;
@@ -1183,10 +1184,8 @@ select:-webkit-autofill {
     margin-right: auto;
   }
   .hero h3 {
-    margin-left: auto;
-    margin-right: auto;
-    width: 90%;
     text-indent: 25px;
+    margin-left: 0;
   }
   #contact-section .bg-clipper {
     height: 105%;
@@ -1206,12 +1205,20 @@ select:-webkit-autofill {
   #contact-section .contact-svg {
     display: none;
   }
+  #skills-section .skills-text {
+    text-align: center;
+  }
+  #skills-section .hero-title {
+    margin-left: -4% !important;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
   #skills-section .skills-wrapper h1 {
     font-size: 40px;
-  }
-  #skills-section .skills-wrapper .wrapper-icon .skill-icon {
-    width: 40px;
-    height: 40px;
   }
 }
 /*# sourceMappingURL=main.css.map */
