--- a/public/main.scss
+++ b/public/main.scss
@@ -444,11 +444,11 @@ select:-webkit-autofill {
 	opacity: 0.8;
 	position: absolute;
 	text-align: center;
-	width: 6rem;
+	width: 100px;
 }
 
 .freelancer-svg {
-	width: 45%;
+	width: clamp(250px, 45%, 850px);
 	position: absolute;
 	left: 50%;
 	top: 25%;
@@ -504,9 +504,15 @@ select:-webkit-autofill {
 		clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
 	}
 
-	.skills-section-wrapper {
-		width: 70%;
-		margin: 0 auto 15px auto;
+	.skill-content {
+		position: absolute;
+		top: 55%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+	.action-link {
+		margin-top: 2em !important;
 	}
 
 	.skills-section {
@@ -525,8 +531,8 @@ select:-webkit-autofill {
 		font-size: 2em;
 		transform: rotate(90deg);
 		position: absolute;
-		right: 6%;
-		top: 50%;
+		right: -2%;
+		top: 45%;
 	}
 
 	.skills-wrapper {
@@ -553,8 +559,8 @@ select:-webkit-autofill {
 			}
 			.skill-icon {
 				max-width: 100%;
-				height: 80px;
-				width: 80px;
+				height: clamp(50px, 5vw, 80px);
+				width: clamp(50px, 5vw, 80px);
 				margin: auto;
 				transition: ease-in 0.2s;
 			}
@@ -710,13 +716,10 @@ select:-webkit-autofill {
 
 	#maral {
 		h1,
-		h1 a {
-			color: color(maral);
-		}
-
-		b {
-			color: color(maral);
-		}
+		h1 a,
+		b a,
+		b,
+		a,
 		li {
 			color: color(maral);
 		}
@@ -940,6 +943,10 @@ select:-webkit-autofill {
 	}
 
 	#skills-section {
+		.skill-content {
+			top: 50%;
+		}
+
 		.skills-section {
 			h2 {
 				margin-left: 0;
@@ -962,11 +969,6 @@ select:-webkit-autofill {
 			margin-top: -15px;
 			text-indent: 20px;
 		}
-		.hero-secondary-title {
-			margin-left: auto;
-			margin-right: auto;
-			width: 90%;
-		}
 
 		.portfolio-link {
 			margin-left: auto;
@@ -981,10 +983,8 @@ select:-webkit-autofill {
 		}
 
 		h3 {
-			margin-left: auto;
-			margin-right: auto;
-			width: 90%;
 			text-indent: 25px;
+			margin-left: 0;
 		}
 	}
 
@@ -1009,15 +1009,18 @@ select:-webkit-autofill {
 	}
 
 	#skills-section {
+		.skills-text {
+			text-align: center;
+		}
+		.hero-title {
+			margin-left: -4% !important;
+			display: flex;
+			justify-content: center;
+		}
+
 		.skills-wrapper {
 			h1 {
 				font-size: 40px;
-			}
-			.wrapper-icon {
-				.skill-icon {
-					width: 40px;
-					height: 40px;
-				}
 			}
 		}
 	}
